--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
         - "8080"
     labels:
       - traefik.enable=true
-      - traefik.docker.network=ncbuilder_web
+      - traefik.docker.network=web
       - traefik.http.routers.nextcloud.rule=Host(`${NEXTCLOUD_URL}`)
       - traefik.http.routers.nextcloud.tls=true
       - traefik.http.routers.nextcloud.tls.certresolver=le
@@ -77,7 +77,7 @@ services:
       - 80
     labels:
       - traefik.enable=true
-      - traefik.docker.network=traefik
+      - traefik.docker.network=web
       - traefik.http.middlewares.redirect-https.redirectScheme.scheme=https
       - traefik.http.middlewares.redirect-https.redirectScheme.permanent=true
       - traefik.http.routers.bitwarden-ui-https.rule=Host(`${BITWARDEN_URL}`)
@@ -104,6 +104,7 @@ services:
       WEBSOCKET_ENABLED: 'true' # Required to use websockets
     networks:
       - web
+
 networks:
   web:
   database:
