tupdated all docker images to latest

--- a/.env
+++ b/.env
@@ -4,16 +4,16 @@
 BASE_DATA_LOCATION=
 
 # Traefik & TLS Configuration
-TRAEFIK_DOCKER_IMAGE=traefik:v2.0
+TRAEFIK_DOCKER_IMAGE=traefik:latest
 TRAEFIK_API_INSECURE_ENABLED=false
 TRAEFIK_LETSENCRYPT_EMAIL=
 
 # Nextcloud Configuration
-NEXTCLOUD_DOCKER_IMAGE=nextcloud:19
+NEXTCLOUD_DOCKER_IMAGE=nextcloud:latest
 NEXTCLOUD_URL=
 
 # MariaDB Configuration
-MARIADB_DOCKER_IMAGE=mariadb:10.4
+MARIADB_DOCKER_IMAGE=mariadb:latest
 MARIADB_ROOT_PASSWORD=
 MARIADB_NEXTCLOUD_DATABASE=nextcloud
 MARIADB_NEXTCLOUD_USER=nextcloud
