Limit the database log size because it was growing huge

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,10 @@ services:
       - MYSQL_PASSWORD=${MARIADB_NEXTCLOUD_PASSWORD}
     networks:
       - database-network
+    logging:
+        options:
+            max-size: "100m"
+            max-file: "10"
 
   cron:
     image: ${NEXTCLOUD_DOCKER_IMAGE}
