--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,28 @@ services:
     networks:
       - traefik-network
 
+  landing:
+    image: nginx:alpine
+    container_name: landing-page
+    restart: unless-stopped
+    volumes:
+      - ${BASE_DATA_LOCATION}/landing:/usr/share/nginx/html:ro
+    labels:
+      - traefik.enable=true
+      - traefik.docker.network=traefik-network
+      - traefik.http.routers.landing.rule=Host(`${BASE_DOMAIN}`)
+      - traefik.http.routers.landing.entrypoints=websecure
+      - traefik.http.routers.landing.tls=true
+      - traefik.http.routers.landing.tls.certresolver=le
+      - traefik.http.services.landing.loadbalancer.server.port=80
+      # HTTP to HTTPS redirect
+      - traefik.http.middlewares.landing-redirect-web-secure.redirectscheme.scheme=https
+      - traefik.http.routers.landing-web.middlewares=landing-redirect-web-secure
+      - traefik.http.routers.landing-web.rule=Host(`${BASE_DOMAIN}`)
+      - traefik.http.routers.landing-web.entrypoints=web
+    networks:
+      - traefik-network
+
   nextcloud:
     image: ${NEXTCLOUD_DOCKER_IMAGE}
     container_name: nextcloud
