upgraded to deb13 updated backup and setup scripts and added wip for git serve

--- a/.env
+++ b/.env
@@ -1,16 +1,22 @@
 # Use ./generate-password.sh to populate *PASSWORD vars with strong passwords.
 
 # Globals
-BASE_DATA_LOCATION=
+BASE_DATA_LOCATION=/mnt/data
+BASE_DOMAIN=
+
+# Soft Serve
+SOFTSERVE_ADMINKEY=""
+SOFTSERVE_URL=git.
 
 # Traefik & TLS Configuration
 TRAEFIK_DOCKER_IMAGE=traefik:latest
 TRAEFIK_API_INSECURE_ENABLED=false
 TRAEFIK_LETSENCRYPT_EMAIL=
+TRAEFIK_IP=192.168.16.0/20
 
 # Nextcloud Configuration
 NEXTCLOUD_DOCKER_IMAGE=nextcloud:latest
-NEXTCLOUD_URL=
+NEXTCLOUD_URL=nextcloud.
 
 # MariaDB Configuration
 MARIADB_DOCKER_IMAGE=mariadb:latest
@@ -21,4 +27,4 @@ MARIADB_NEXTCLOUD_PASSWORD=
 
 # Bitwarden Configuration
 BITWARDEN_DOCKER_IMAGE=vaultwarden/server:latest
-BITWARDEN_URL=
+BITWARDEN_URL=bitwarden.
